--- a/default.conf
+++ b/default.conf
@@ -1,3 +1,15 @@
+# map $http_upgrade $type {
+#   default "web";
+#   websocket "wss";
+# }
+
+server {
+    listen 80;
+    server_name e-commerce.smctgroup.ph;
+
+    return 301 https://$host$request_uri;
+}
+
 server {
     listen 9003;
     listen [::]:9003;
